# voxel-game

./: CMakeLists.txt
.github/workflows/: cmake.yml
src/farlands/: main.c
src/farlands/gfx/: gl_ctx.c  gl_ctx.h
src/farlands/lib/: exit.c  exit.h  prelude.c  prelude.h
